--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perinci-AccessUtil
 
+0.03    2014-10-23 (PERLANCAR)
+
+	- Add function: insert_riap_stuffs_to_res.
+
+
 0.02     2014-10-23 (PERLANCAR)
 
          - Rename module from Perinci::AccessUtil::Check to Perinci::AccessUtil.
