Import of PERLANCAR/Perinci-AccessUtil-0.04 from CPAN.
gitpan-cpan-distribution: Perinci-AccessUtil
gitpan-cpan-version:      0.04
gitpan-cpan-path:         PERLANCAR/Perinci-AccessUtil-0.04.tar.gz
gitpan-cpan-author:       PERLANCAR
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perinci-AccessUtil
 
+0.04    2014-10-23 (PERLANCAR)
+
+	- Add function: decode_args_in_riap_req().
+
+
 0.03    2014-10-23 (PERLANCAR)
 
 	- Add function: insert_riap_stuffs_to_res.
