--- a/README
+++ b/README
@@ -2,12 +2,22 @@ NAME
     Perinci::AccessUtil - Utility module for Riap client/server
 
 VERSION
-    This document describes version 0.03 of Perinci::AccessUtil (from Perl
+    This document describes version 0.04 of Perinci::AccessUtil (from Perl
     distribution Perinci-AccessUtil), released on 2014-10-23.
 
 SYNOPSIS
-     use Perinci::AccessUtil qw(strip_riap_stuffs_from_res);
-     my $res = strip_riap_stuffs_from_res([200,"OK"]);
+     use Perinci::AccessUtil qw(
+         strip_riap_stuffs_from_res
+         insert_riap_stuffs_to_res
+         decode_args_in_riap_req
+     );
+
+     strip_riap_stuffs_from_res([200,"OK",undef,{"riap.v"=>1.1}]); # => [200,"OK",undef]
+     strip_riap_stuffs_from_res([200,"OK",undef,{"riap.foo"=>1}]); # => [501, "Unknown Riap attribute in result metadata: riap.foo"]
+
+     insert_riap_stuffs_to_res([200,"OK",undef); # => [200,"OK",undef,{"riap.v"=>1.1}]
+
+     decode_args_in_riap_req({v=>1.2, args=>{"a:base64"=>"AAAA"}}); # => {v=>1.2, args=>{a=>"\0\0\0"}}
 
 DESCRIPTION
 FUNCTIONS
@@ -34,6 +44,10 @@ FUNCTIONS
     stripped. If there is an error, an error response will be returned
     instead. Either way, you can use the response returned by this function
     to user.
+
+  decode_args_in_riap_req($req) => $req
+    Replace "ARGNAME:base64" keys in "arg" in Riap request $req with their
+    decoded values. Only done when "v" key is at least 1.2.
 
 SEE ALSO
     Riap, Perinci::Access.
