--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perinci-AccessUtil
 
+0.05    2014-10-24 (PERLANCAR)
+
+	- Add option to disable encoding of result.
+
+
 0.04    2014-10-23 (PERLANCAR)
 
 	- Add function: decode_args_in_riap_req().
